...
    android:layout_height="match_parent"
    android:background="@drawable/homepage_background"
    tools:context=".view.ProfileFragment">


    <ImageButton
        android:id="@+id/drop_down_button"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="295dp"
        android:layout_marginTop="30dp"
...
        android:layout_alignParentStart="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20dp">
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/baseline_person_2_24" />/>
    </androidx.cardview.widget.CardView>

...
